--- a/app.json
+++ b/app.json
@@ -2,6 +2,6 @@
   "name": "Start on Heroku: Node.js",
   "description": "A barebones Node.js app using Express 4",
   "repository": "https://github.com/heroku/node-js-getting-started",
-  "keywords": ["node", "express", "heroku"],
-  "image": "heroku/nodejs"
+  "logo": "https://cdn.rawgit.com/heroku/node-js-getting-started/master/public/node.svg",
+  "keywords": ["node", "express", "heroku"]
 }
