--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "ejs": "^2.5.6",
     "express": "^4.15.2",
     "express-sslify": "^1.2.0",
-    "pg": "^7.17.1"
+    "pg": "^7.17.1",
+    "redis": "^3.0.2"
   },
   "devDependencies": {
     "request": "^2.81.0",
