--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ejs": "^2.5.6",
     "express": "^4.15.2",
     "express-sslify": "^1.2.0",
+    "ioredis": "^4.14.1",
     "pg": "^7.17.1",
     "redis": "^3.0.2"
   },
