--- a/app.json
+++ b/app.json
@@ -5,4 +5,14 @@
   "logo": "https://cdn.rawgit.com/heroku/node-js-getting-started/master/public/node.svg",
   "keywords": ["node", "express", "heroku"],
   "image": "heroku/nodejs"
+
+"env": {
+"HEROKU_APP_NAME": {
+"required": true 
+},
+
+"scripts": {
+"postdeploy": "sh h-post.sh"
+}
+
 }
