--- a/app.json
+++ b/app.json
@@ -4,14 +4,5 @@
   "repository": "https://github.com/heroku/node-js-getting-started",
   "logo": "https://cdn.rawgit.com/heroku/node-js-getting-started/master/public/node.svg",
   "keywords": ["node", "express", "heroku"],
-  "image": "heroku/nodejs",
-"env": {
-"HEROKU_APP_NAME": {
-"required": true 
-},
-
-"scripts": {
-"postdeploy": "sh h-post.sh"
-}
-
+  "image": "heroku/nodejs"
 }
