--- a/app.json
+++ b/app.json
@@ -5,5 +5,5 @@
   "logo": "https://cdn.rawgit.com/heroku/node-js-getting-started/master/public/node.svg",
   "keywords": ["node", "express", "heroku"],
   "image": "heroku/nodejs",
-  "addons": ["heroku-postgresql:hobby-dev", "papertrail:choklad", "newrelic:wayne"]
+  "addons": ["heroku-postgresql:basic", "papertrail:choklad", "newrelic:wayne"]
 }
